# pogadane

./: .gitignore  BUILD_EXECUTABLE.md  BUILD_QUICK_REF.txt  CHANGELOG.md  CODE_QUALITY_IMPROVEMENTS.md  CONSOLIDATION_SUMMARY.md  DEMO_QUICK_START.md  DEMO_README.md  FASTER_WHISPER_IMPLEMENTATION.md  FASTER_WHISPER_LIBRARY.md  GUI_ENHANCEMENTS.md  GUI_ENHANCEMENTS_SUMMARY.md  GUI_QUICK_START.md  GUI_RUNTIME_FIXES.md  IMPLEMENTATION_COMPLETE.md  INSTALL.md  INSTALLATION.md  INSTALL_SIMPLE.txt  M3_EXPRESSIVE_DESIGN_SYSTEM.md  MERGE_GUIDE.md  MIGRATION_GUIDE.md  NATIVE_PYTHON_REFACTORING.md  NOTICES.md  ORGANIZATION_SUMMARY.md  PACKAGE_MODERNIZATION_SUMMARY.md  PROGRESS_API_REFERENCE.md  Pogadane.bat  QUICK_START.md  README.md  README_INSTALLATION_SECTION.md  SETTINGS_REDESIGN_COMPLETE.md  SMART_SETTINGS_IMPLEMENTATION.md  UX_UI_REDESIGN_SUMMARY.md  build_exe.ps1  config.py  create_demo.py  create_launcher.py  demo_ui.py  gui.py  install.bat  (+22 more)
.config/: config.py
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
_app/: install.py  pyproject.toml
_app/.config/: config.py  settings.json
_app/dep/models/: .gitkeep
_app/res/assets/: CookieDuckApp_Duck_Walk_01.webm
_app/src/pogadane/: __init__.py  __main__.py  backend.py  config_loader.py  file_utils.py  gui_flet.py  llm_providers.py  text_utils.py  transcription_providers.py
_app/src/pogadane/gui_utils/: __init__.py
_dev/: create_launcher.py
_dev/test/: __init__.py  conftest.py  test_config_loader.py  test_constants.py  test_edge_cases.py  test_model_task_fix.py  test_text_utils.py
cli_help/: ollama_help.txt
dep/: README.md  STRUCTURE.md
doc/: ANIMATIONS_GUIDE.md  ARCHITECTURE.md  BRAND_COLORS.md  CROSS_PLATFORM_GUIDE.md  DARK_MODE_GUIDE.md  DOCUMENTATION_CLEANUP.md  FASTER_WHISPER_LIBRARY.md  FILE_ORGANIZATION.md  GUI_COMPARISON.md  GUI_COMPARISON_ALL.md  GUI_ENHANCEMENTS_SUMMARY.md  GUI_MATERIAL_3_EXPRESSIVE.md  GUI_MATERIAL_DESIGN.md  INSTALLATION_SYSTEM.md  MATERIAL_3_EXPRESSIVE_IMPLEMENTATION.md  MATERIAL_GUI_IMPLEMENTATION.md  NOTICES.md  PIP_ONLY_INSTALLATION.md  QUICK_START_GUI.md  QUICK_START_MATERIAL_3.md  README.md  REFACTORING.md  REPOSITORY_AUDIT_REPORT.md  REPOSITORY_CLEANUP_SUMMARY.md  SETTINGS_UI_COMPARISON.md  SMART_SETTINGS_UI.md  VISUAL_DESIGN_COMPARISON.md  gemma_terms.md  pogadane_color_palette.html
doc/archive/: EXE_PURGE_SUMMARY.md  GUI_REFACTORING_COMPLETE.md  INSTALLATION_SYSTEM_LEGACY.md  PIP_ONLY_MIGRATION.md  PIP_ONLY_README_SECTION.md
doc/cli_help/: faster-whisper-xxl_help.txt  yt-dlp_help.txt
previous_versions/: transcribe_summarize_working_0.1.1.py  transcribe_summarize_working_0.1.2.py  transcribe_summarize_working_0.1.3.py  transcribe_summarize_working_0.1.4.py  transcribe_summarize_working_0.1.py  transcribe_summarize_working_v0.1.5.py  transcribe_summarize_working_v0.1.6.py
res/assets/: CookieDuckApp_Duck_Walk_01.json
samples/: README.md  demo_native_progress.py
src/pogadane/: __init__.py  backend.py  config_loader.py  constants.py  doctor.py  file_utils.py  gui.py  gui_flet.py  gui_flet_backup.py  gui_material.py  llm_providers.py  text_utils.py  transcribe_summarize_working.py  transcription_providers.py  types.py
src/pogadane/gui_utils/: __init__.py  font_manager.py  results_manager.py
test/: README.md  conftest.py  test_config_loader.py  test_constants.py  test_edge_cases.py  test_file_utils.py  test_font_manager.py  test_llm_providers.py  test_new_models.py  test_results_manager.py
tools/: README.md  dependency_manager.py  extract_faster_whisper.py  install.py  install_gui.py  pogadane_doctor.py
