[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pogadane"
version = "0.1.8"
description = "Transform audio recordings and YouTube videos into transcripts and AI-powered summaries"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "WSB University - Problem Based Learning"}
]
keywords = [
    "transcription",
    "summarization",
    "whisper",
    "youtube",
    "audio",
    "speech-to-text",
    "gguf"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

dependencies = [
    "flet>=0.24.0",
    "yt-dlp>=2023.0.0",
    "faster-whisper>=1.0.0",
    "llama-cpp-python>=0.2.0",
    "google-generativeai>=0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.1",
    "black>=23.0.0",
    "pylint>=2.17.0",
]

[project.urls]
Homepage = "https://github.com/WSB-University-Problem-Based-Learning/pogadane"
Repository = "https://github.com/WSB-University-Problem-Based-Learning/pogadane"

[project.scripts]
pogadane = "pogadane.__main__:main"

[tool.setuptools]
zip-safe = false

[tool.setuptools.packages.find]
where = ["src"]

# Black code formatter
[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py311', 'py312', 'py313']

# Pytest
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["test"]

# Coverage
[tool.coverage.run]
source = ["src/pogadane"]

# MyPy
[tool.mypy]
python_version = "3.9"
ignore_missing_imports = true

# Pylint
[tool.pylint.format]
max-line-length = 100
